# LLM_tasker

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
apis/: Dockerfile  README.md  api.py  examples_api.py  main.py  pyproject.toml
apps/: README.md  main.py
apps/assets/css/: main.css
apps/src/: __init__.py  classification_fermee.py  classification_fermee_.py  custom_html_content.py  exemples.py  interface.py  utils.py
docs/: apis.md  ihms.md  index.md  references.md  umls.md
docs/exemples/: custom_classification.md  open_classification.md  task_closed_classification.md  task_closed_classification_multilabels.md  task_closed_grouped_classification.md  task_custom_instruction.md
examples/: custom.py  custome_madjid.py  grouped_classification.py  open_classification.py  task_closed_classification.py  task_closed_classification_multilabels.py  task_closed_grouped_classification copy.py  task_closed_grouped_classification.py  task_closed_grouped_classification_multilabels copy.py  task_closed_grouped_classification_multilabels.py  task_custom_instruction.py
llmtasker/: exceptions.py  parsers.py  utils.py
llmtasker/executors/: base.py  langchain.py
llmtasker/items/: base.py
llmtasker/prompts/: base.py  lc_base.py
llmtasker/tasks/: base.py  classification.py  custom_instruction.py
prompts/: README.md  custom_instruction.jinja  open_classification.jinja  prompt_6.py  test.jinja
tests/: conftest.py  test_executors.py  test_items.py  test_parsers.py  test_prompts.py
tests/tests_assets/: prompt_generic.jinja  test.jinja
